# amiro_senseact

./: .gitmodules  README.md  source.sh
project/act/actAmiroVector/: CMakeLists.txt  Readme.md  main.cxx
project/act/actEmergencyStop/: .gitignore  CMakeLists.txt  README.md  main.cxx
project/act/actPoseToTargetPosition/: .gitignore  CMakeLists.txt  README.md  main.cxx
project/act/actTargetPosition/: .gitignore  CMakeLists.txt  main.cxx
project/act/motorControl/: .gitignore  CMakeLists.txt  Readme.md  main.cxx
project/act/setLights/: .gitignore  CMakeLists.txt  Readme.md  main.cxx
project/demo/sense_act_demo/: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  rsb.conf  start.sh  stop.sh
project/process/actingBehavior/driveWaypoints/: CMakeLists.txt  main.cxx
project/process/actingBehavior/edgeApproachBehavior/: CMakeLists.txt  main.cxx  start.txt
project/process/actingBehavior/edgeAvoidanceBehavior/: CMakeLists.txt  main.cxx  start.txt
project/process/actingBehavior/follow_DepthCam/: CMakeLists.txt  main.cxx  rsb.conf  start.txt
project/process/actingBehavior/follow_LaserScanner/: CMakeLists.txt  main.cxx  start.txt
project/process/exploration/braitenberg/: CMakeLists.txt  main.cxx  start.txt
project/process/exploration/braitenberg2a/: .gitignore  CMakeLists.txt  main.cxx  start.txt
project/process/exploration/frontierExploration/: CMakeLists.txt  main.cxx  rsb.conf  start.txt
project/process/localization/particlefilter/: .gitignore  CMakeLists.txt  laserscan.h  likelihoodfieldmodel.h  main.cxx  map.h  particlefilter.cpp  particlefilter.h  raycastingmodel.cpp  raycastingmodel.h  sampleset.h  sensormodel.h
project/process/localization/particlefilter/documentation/: start.txt
project/process/localization/particlefilter/importancetype/: addgaussians.h  importancetype.h  inversedistance.h  multiplygaussians.h  multiplygaussianslog.h
project/process/mapping/CoreSLAM/: .gitignore  CMakeLists.txt  main.cxx  start.sh  start.txt
project/process/mapping/mapGenerator/: CMakeLists.txt  extspread.cxx  extspread.hpp  main.cxx  mapGenerator.cxx  mapGenerator.hpp  pathPlanner.cxx  pathPlanner.hpp  rsbsend.sh  start.txt
project/process/misc/rsb_ws_bridge_amiro/: .gitignore  CMakeLists.txt  main.cxx  rsb.conf
project/process/misc/rsb_ws_bridge_amiro/www/: index.html  overview.html
project/process/misc/rsb_ws_bridge_amiro/www/iui/: iui.css  iui.js  iuix.js
project/process/misc/rsb_ws_bridge_amiro/www/iui/t/default/: default-theme.css
project/process/misc/rsb_ws_bridge_amiro/www/machines/: amiro.html  lexion.html
project/process/misc/rsb_ws_bridge_amiro/www/media/: info.txt
project/process/misc/rsb_ws_bridge_amiro/www/questions/: overview.txt  processList.txt  rsblogger.txt
project/process/misc/rsb_ws_bridge_amiro/www/sensors/: .lase.html.kate-swp  camera.html  lase.html  lase_menu.html  text.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/audition/: FloatSoundArray.proto  FormattedSoundChunk.proto  InterauralTimeDifference.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/classification/: ClassificationResult.proto  ClassifiedRegion2D.proto  ClassifiedRegions2D.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/communicationpatterns/: TaskState.proto  __package.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/devices/: __package.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/dynamics/: Forces.proto  JointImpedance.proto  JointTorques.proto  Wrench.proto  __package.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/generic/: KeyValuePair.proto  __package.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/geometry/: AxisAlignedBoundingBox3DFloat.proto  BoundingBox3DFloatSet.proto  CameraPose.proto  Cylinder3DFloat.proto  FieldOfView.proto  Lengths.proto  PointCloud2DInt.proto  PointCloud3DFloat.proto  PointCloudSet3DFloat.proto  PointPair.proto  Pose.proto  Shape3DFloat.proto  Translation.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/hri/: LegsList.proto
project/process/misc/rsb_ws_bridge_amiro/www/sensors/rst/math/: Vec2DFloat.proto  (+4 more)
project/process/misc/rsb_ws_bridge_amiro/www/types/: SickLdMRS4002.proto
project/process/misc/rsb_ws_bridge_amiro/www/watchdog/: processList.html
project/process/misc/teleoperationWebserver/: .gitignore  CMakeLists.txt  README  main.cxx  run.sh
project/process/misc/teleoperationWebserver/Server/: Socket_Infrared.js  Steuern_Camera.js  Steuern_Steuerkreuz.js  amiro_infrared.js  bebot_infrared.js  disabled.js  draw.js  functions.js  help.js  main.js  project.css  project.html  variables.js
project/process/statemachines/final2016/: .gitignore  CMakeLists.txt  StateDescriptions.txt  main.cxx  start.txt
project/process/statemachines/stateMachineGEPTRO_CommandSimulation/: CMakeLists.txt  main.cxx  start.txt
project/sense/sendOdometryProtoPose/: .gitignore  CMakeLists.txt  Readme.md  main.cxx
project/sense/senseHokuyo/: .gitignore  CMakeLists.txt  README.md  main.cxx
project/sense/senseOpenNi2/: .gitignore  CMakeLists.txt  README.md  main.cxx
project/sense/senseRingProximity/: CMakeLists.txt  Readme.md  main.cxx
project/sense/senseSickTim/: .gitignore  CMakeLists.txt
project/sense/senseSickTim/include/sick_tim/: SickTimConfig.h  abstract_parser.h  sick_tim551_2050001_parser.h  sick_tim_common.h  sick_tim_common_tcp.h  sick_tim_common_usb.h  sick_tim_datagram_test.h
project/sense/senseSickTim/src/: abstract_parser.cpp  sick_tim551_2050001.cpp  sick_tim551_2050001_parser.cpp  sick_tim_common.cpp  sick_tim_common_tcp.cpp  sick_tim_common_usb.cpp
project/sense/senseSimple3DTo2D/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cxx  rsb.conf
project/sense/waypoint/: CMakeLists.txt  README.md  main.cxx  rsb.conf  startWaypoint.sh  stopWaypoint.sh
project/sense/waypointLegDetector/: CMakeLists.txt  calc_leg_features.cpp  laser_processor.cpp  main.cxx  start.txt
project/sense/waypointLegDetector/include/leg_detector/: calc_leg_features.h  laser_processor.h
(+564 files in other folders)
