cmake_minimum_required (VERSION 2.6)
# Set the project name to the name of the folder
string (REGEX MATCH "[^/]+$" PROJECT_NAME "${CMAKE_CURRENT_BINARY_DIR}")
message (STATUS "Set PROJECT_NAME to ${PROJECT_NAME}")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "$ENV{MUROX_PROJECT}/utilities/cmake")

add_subdirectory ($ENV{MUROX_PROJECT}/act/actAmiroLights actAmiroLights)
add_subdirectory ($ENV{MUROX_PROJECT}/act/actAmiroMotor actAmiroMotor)
add_subdirectory ($ENV{MUROX_PROJECT}/act/actAmiroVector actAmiroVector)
add_subdirectory ($ENV{MUROX_PROJECT}/act/actEmergencyStop actEmergencyStop)
add_subdirectory ($ENV{MUROX_PROJECT}/act/actPoseToTargetPosition actPoseToTargetPosition)
add_subdirectory ($ENV{MUROX_PROJECT}/act/actTargetPosition actTargetPosition)
add_subdirectory ($ENV{MUROX_PROJECT}/act/motorControl motorControl)
add_subdirectory ($ENV{MUROX_PROJECT}/act/setLights setLights)

add_subdirectory ($ENV{MUROX_PROJECT}/sense/sendOdometryProtoPose sendOdometryProtoPose)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseCam senseCam)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseFloorProximity senseFloorProximity)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseHokuyo senseHokuyo)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseOpenNi2 senseOpenNi2)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseRGBDCam senseRGBDCam)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseRingProximity senseRingProximity)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseSickTim senseSickTim)
add_subdirectory ($ENV{MUROX_PROJECT}/sense/senseSimple3DTo2D senseSimple3DTo2D)
